[package]
name = "cargo-debugger"
version = "0.1.1"
edition = "2021"
authors = ["Jonathan Kelley"]
license = "MIT"
description = "Launch your cargo build with the vscode debugger attached"
repository = "https://github.com/jkelleyrtp/cargo-debugger"

[[bin]]
name = "cargo-debugger"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
cargo_metadata = "0.19.1"
# krates = "0.17.5"
clap = { version = "4.5.28", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["full"] }
# tracing = "0.1.41"
urlencoding = "2.1.3"
